@@ -1,0 +1,69 @@
+name: packages
+
+on:
+  push:
+    tags:
+    - '*'
+
+jobs:
+    compile:
+        name: build
+        runs-on: ubuntu-latest
+        steps:
+          - name: Check out the repo
+            uses: actions/checkout@v2
+          - name: Build on rhel8
+            uses: addnab/docker-run-action@v3
+            with:
+                image: almalinux:8
+                options: -v ${{ github.workspace }}:/work
+                run: |
+                  yum -yq install rpm-build epel-release python3 util-linux
+                  mkdir -p /work/dist/rhel8
+                  cd /work/
+                  python --version
+                  python3.6 setup.py bdist_rpm --python /usr/bin/python3.6
+                  mv /work/dist/*.rpm /work/dist/rhel8
+                  mv /work/dist/*.tar.gz /work/dist/rhel8
+          - name: Build on rhel9
+            uses: addnab/docker-run-action@v3
+            with:
+                image: almalinux:9
+                options: -v ${{ github.workspace }}:/work
+                run: |
+                  yum -yq install rpm-build epel-release python3 \
+                    python3-setuptools util-linux
+                  mkdir -p /work/dist/rhel9
+                  cd /work/
+                  python3.9 setup.py bdist_rpm --python /usr/bin/python3.9 \
+                    --requires "python3-libvirt python3-libnbd python3-lxml python3-tqdm python3-lz4 nbdkit-server nbdkit-python-plugin python3-paramiko python3-typing-extensions python3-colorlog"
+                  mv /work/dist/*.rpm /work/dist/rhel9
+                  mv /work/dist/*.tar.gz /work/dist/rhel9
+          - name: Build on debian
+            uses: addnab/docker-run-action@v3
+            with:
+                image: debian:latest
+                options: -v ${{ github.workspace }}:/work
+                run: |
+                  apt-get update -qy
+                  apt-get install -qy python3-all \
+                    python3-stdeb \
+                    dh-python \
+                    python3-libnbd \
+                    python3-tqdm \
+                    python3-lz4 \
+                    python3-libvirt \
+                    python3-lxml \
+                    python3-paramiko \
+                    python3-colorlog
+                  cd /work/
+                  python3 setup.py --command-packages=stdeb.command bdist_deb
+                  mv deb_dist/*.tar.gz dist/
+                  mv deb_dist/*.tar.xz dist/
+                  mv deb_dist/*.deb dist/
+          - name: Archive Test Results
+            if: always()
+            uses: actions/upload-artifact@v1
+            with:
+              name: packages.zip
+              path: dist/
