@@ -1,44 +1,0 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
-Vagrant.configure("2") do |config|
-  config.vm.box = "generic/debian12"
-  config.vm.box_check_update = false
-  config.vm.provider :libvirt do |libvirt|
-    libvirt.cpus = 2
-    libvirt.memory = 3500
-    libvirt.memorybacking :access, :mode => "shared"
-  end
-  config.vm.provision "shell", inline: <<-SHELL
-    set -xe
-    sed -i 's/deb.debian/ftp.de.debian/g' /etc/apt/sources.list
-    apt-get update -qy
-    apt-get install -qy python3-all \
-      python3-stdeb \
-      dh-python \
-      python3-libnbd \
-      python3-tqdm \
-      python3-lz4 \
-      python3-libvirt \
-      python3-lxml \
-      python3-paramiko \
-      python3-colorlog \
-      git
-    rm -rf virtnbdbackup;
-    git clone https://github.com/abbbi/virtnbdbackup
-    cd virtnbdbackup
-    set +x
-    python3 setup.py --command-packages=stdeb.command bdist_deb
-    find deb_dist/ -mindepth 1 -maxdepth 1 -type d | xargs rm -rf \{\} \;
-    cp -a deb_dist/*.* /vagrant
-    apt install -y ./deb_dist/virtnbdbackup*_all.deb
-    virtnbdbackup -h
-    virtnbdrestore -h
-    virtnbdmap -h
-   SHELL
-   config.vm.synced_folder "../../dist/debian", "/vagrant", type: "virtiofs"
-end
