@@ -1,33 +1,0 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
-Vagrant.configure("2") do |config|
-  config.vm.box = "generic/alma9"
-  config.vm.box_check_update = false
-  config.vm.provider :libvirt do |libvirt|
-    libvirt.cpus = 2
-    libvirt.memory = 3500
-    libvirt.memorybacking :access, :mode => "shared"
-  end
-  config.vm.provision "shell", inline: <<-SHELL
-    set -xe
-    YUM="yum -yq"
-    $YUM install git rpm-build python3-setuptools
-    $YUM reinstall epel-release || true # epel-release is installed, but files removed
-    rm -rf virtnbdbackup;
-    git clone https://github.com/abbbi/virtnbdbackup
-    cd virtnbdbackup
-    set +x
-    python3.9 setup.py bdist_rpm --python /usr/bin/python3.9 --requires "python3-libvirt python3-libnbd python3-lxml python3-tqdm python3-lz4 nbdkit-server nbdkit-python-plugin python3-paramiko python3-typing-extensions python3-colorlog"
-    cp dist/* /vagrant
-    yum install -y dist/*noarch*.rpm
-    virtnbdbackup -h
-    virtnbdrestore -h
-    virtnbdmap -h
-   SHELL
-   config.vm.synced_folder "../../dist/rhel9/", "/vagrant", type: "virtiofs"
-end
